<resources>
    <string name="app_name">SYM - Labo 4</string>

    <string name="nav_4">Capteurs</string>
    <string name="nav_5">BLE</string>

    <string name="ble_menu_search">Recherche</string>
    <string name="ble_menu_disconnect">Déconnexion</string>

    <string name="ble_empty">Veuillez lancer le scan <i>Bluetooth Low Energy</i> en appuyant ci-dessus</string>

    <string name="ble_currenttime_title">Current time</string>
    <string name="ble_currenttime_set">Set time</string>
    <string name="ble_clickcounter_title">Click counter</string>
    <string name="ble_temperature_title">Température</string>
    <string name="ble_temperature_read">Read</string>

    <string name="ble_sendvalue_title">Envoi de valeur</string>
    <string name="ble_sendvalue_send">Send</string>

    <string name="time">Dernière synchronisation</string>
    <string name="synchronize">synchroniser</string>
    <string name="valeur">Envoyer une valeur</string>
    <string name="envoyer">Envoyer</string>
    <string name="boutons">Nombre d\'appuis sur un bouton</string>
    <string name="température">Température</string>
    <string name="get_temp">Demander</string>
</resources>
